implements architecture to handle in a proper way the backend with classes and DI

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -12,7 +12,11 @@
         "strict": true,
         "noImplicitAny": true,
         "strictNullChecks": true,
+        "lib": ["es6", "dom"],
         "esModuleInterop": true,
+        "types": ["reflect-metadata"],
+        "experimentalDecorators": true,
+        "emitDecoratorMetadata": true,
         "skipLibCheck": true,
         "moduleResolution": "Node",
         "forceConsistentCasingInFileNames": true
