--- a/package.json
+++ b/package.json
@@ -31,6 +31,8 @@
   "dependencies": {
     "dotenv": "^16.3.1",
     "express": "^4.18.2",
-    "mongoose": "^8.0.4"
+    "inversify": "^6.0.2",
+    "mongoose": "^8.0.4",
+    "reflect-metadata": "^0.2.1"
   }
 }
