--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
   "devDependencies": {
     "@types/bcrypt": "^5.0.2",
     "@types/express": "^4.17.21",
+    "@types/jsonwebtoken": "^9.0.5",
     "@typescript-eslint/eslint-plugin": "^6.18.1",
     "@typescript-eslint/parser": "^6.18.1",
     "eslint": "^8.56.0",
@@ -35,6 +36,7 @@
     "express": "^4.18.2",
     "http-status-codes": "^2.3.0",
     "inversify": "^6.0.2",
+    "jsonwebtoken": "^9.0.2",
     "mongoose": "^8.0.4",
     "reflect-metadata": "^0.2.1"
   }
