--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "@types/cors": "^2.8.17",
     "@types/express": "^4.17.21",
     "@types/jsonwebtoken": "^9.0.5",
+    "@types/nodemailer": "^6.4.14",
     "@typescript-eslint/eslint-plugin": "^6.18.1",
     "@typescript-eslint/parser": "^6.18.1",
     "eslint": "^8.56.0",
@@ -41,6 +42,7 @@
     "inversify": "^6.0.2",
     "jsonwebtoken": "^9.0.2",
     "mongoose": "^8.0.4",
+    "nodemailer": "^6.9.9",
     "reflect-metadata": "^0.2.1"
   }
 }
